tests/transpiler/x/scala/count_builtin.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/count_builtin.scala:4: error: not found: value count
        println(count(List(1, 2, 3)))
                ^
one error found
