tests/transpiler/x/scala/count_builtin.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:06:02 GMT+7
object Main {
    def main(args: Array[String]): Unit = {
        println(count(List(1, 2, 3)))
    }
}
